fix dark theme collapsed sidebar.

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -49,8 +49,11 @@ p.contributor
   text-align: center
 
 
-html.dark-mode .theorem
-  background-color: $theoremColor
+html.dark-mode
+  .theorem
+    background-color: $theoremColor
+  .sidebar-heading
+    color: #fff
 
 html.sepia-mode .theorem
   background-color: $sepiaTheorem
